# dataframes-benchmarks

./: README.md  package.yaml  pyproject.toml  run_benchmarks.py  run_benchmarks.sh
data/: README.md
python/: baseline.py
report/: Report.ipynb  enso_times.csv  python_times.csv
src/: Main.enso
