[tool.poetry]
name = "enso-table-benchmark"
version = "0.1.0"
description = ""
authors = ["Enso Team <contact@enso.org>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.55.1"
jupyter = "^1.0.0"
pandas = "==1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
